--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-react": "^7.12.1",
     "@hot-loader/react-dom": "^17.0.0-rc.2",
     "@types/chrome": "^0.0.176",
+    "@types/lodash": "^4.14.178",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "babel-loader": "^8.1.0",
@@ -28,5 +29,8 @@
     "webpack": "^5.1.3",
     "webpack-cli": "^4.0.0",
     "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
